[package]
name = "shuttlers-gerrings-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-runtime = "0.16.0"
axum = "0.6.18"

shuttle-axum = "0.16.0"
tokio = "1.28.0"
shuttle-shared-db = { version = "0.16.0", features = ["postgres"] }
shuttle-aws-rds = "0.16.0"
shuttle-static-folder = "0.16.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
serde = "1.0.163"

ec2_instance_metadata = "0.3.0"
